{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 67,
  "lineage": "f3e32a9c-91ad-fd65-bf7a-5e9c7a6975f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08ca1d1e465fbfe0c",
            "arn": "arn:aws:ec2:us-east-2:167611893883:instance/i-0ec717ab177c8b009",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec717ab177c8b009",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5835dd74316af00",
            "private_dns": "ip-10-0-0-72.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.72",
            "public_ip": "18.221.223.238",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8e61a58d612c844",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0858046325754f1eb",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource EC2",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource EC2",
              "Project": "Resources6"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e42fda440ba05f08"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:internet-gateway/igw-0dbd640f4021b2cc9",
            "id": "igw-0dbd640f4021b2cc9",
            "owner_id": "167611893883",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource IGM",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource IGM",
              "Project": "Resources6"
            },
            "vpc_id": "vpc-0dc4824dd96a573dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbd640f4021b2cc9",
            "id": "r-rtb-0cad2b0982c0e6d861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0cad2b0982c0e6d86",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.pub_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:route-table/rtb-0cad2b0982c0e6d86",
            "id": "rtb-0cad2b0982c0e6d86",
            "owner_id": "167611893883",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbd640f4021b2cc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource Route Table",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource Route Table",
              "Project": "Resources6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc4824dd96a573dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff7e53a36e9b719",
            "region": "us-east-2",
            "route_table_id": "rtb-0cad2b0982c0e6d86",
            "subnet_id": "subnet-0858046325754f1eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:security-group/sg-0e42fda440ba05f08",
            "description": "allows traffic on 443 and 80",
            "egress": [],
            "id": "sg-0e42fda440ba05f08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_http_traffic",
            "name_prefix": "",
            "owner_id": "167611893883",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource SG",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource SG",
              "Project": "Resources6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc4824dd96a573dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:subnet/subnet-0858046325754f1eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0858046325754f1eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167611893883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource Subnet",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource Subnet",
              "Project": "Resources6"
            },
            "vpc_id": "vpc-0dc4824dd96a573dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:vpc/vpc-0dc4824dd96a573dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d9c7d3bcb77e686",
            "default_route_table_id": "rtb-0d57a16da1197adbc",
            "default_security_group_id": "sg-08ecba7765f7bff90",
            "dhcp_options_id": "dopt-09ed745a1a19ab299",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc4824dd96a573dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d57a16da1197adbc",
            "owner_id": "167611893883",
            "region": "us-east-2",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource VPC",
              "Project": "Resources6"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-Resource VPC",
              "Project": "Resources6"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:security-group-rule/sgr-0aed1006c35ecaddd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0aed1006c35ecaddd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0e42fda440ba05f08",
            "security_group_rule_id": "sgr-0aed1006c35ecaddd",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:167611893883:security-group-rule/sgr-042c6ffb3d0ca3811",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-042c6ffb3d0ca3811",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0e42fda440ba05f08",
            "security_group_rule_id": "sgr-042c6ffb3d0ca3811",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}